...
                                                        <constraint firstItem="RIs-Yb-VA5" firstAttribute="leading" secondItem="2G5-sZ-pQn" secondAttribute="leading" constant="20" id="R0L-4I-ff7"/>
                                                        <constraint firstAttribute="trailing" secondItem="RIs-Yb-VA5" secondAttribute="trailing" constant="20" id="iHF-nA-W4I"/>
                                                        <constraint firstItem="RIs-Yb-VA5" firstAttribute="top" secondItem="2G5-sZ-pQn" secondAttribute="top" constant="20" id="iuS-w1-TQN"/>
                                                    </constraints>
                                                </view>
                                            </tabViewItem>
                                            <tabViewItem label="Clone" identifier="cloneTab" id="3dN-Dz-hmD">
                                                <view key="view" id="7Ge-Cd-DgC">
                                                    <rect key="frame" x="10" y="33" width="496" height="587"/>
                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                    <subviews>
                                                        <stackView distribution="fill" orientation="vertical" alignment="centerX" spacing="20" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Naz-3v-N1g">
                                                            <rect key="frame" x="0.0" y="0.0" width="496" height="587"/>
...
                                            </textField>
                                            <stackView distribution="fill" orientation="vertical" alignment="centerX" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="G4a-dA-yAd">
                                                <rect key="frame" x="30" y="55" width="177" height="105"/>
                                                <subviews>
                                                    <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="aB5-fK-N4a">
                                                        <rect key="frame" x="41" y="83" width="96" height="22"/>
                                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" placeholderString="Username" bezelStyle="round" id="j7N-nN-18i">
                                                            <font key="font" metaFont="system"/>
                                                            <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        </textFieldCell>
                                                    </textField>
                                                    <secureTextField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="QcQ-lJ-1aI">
                                                        <rect key="frame" x="41" y="53" width="96" height="22"/>
                                                        <secureTextFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" placeholderString="Password" usesSingleLineMode="YES" bezelStyle="round" id="Hj9-1T-aiL">
                                                            <font key="font" metaFont="system"/>
                                                            <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                            <allowedInputSourceLocales>
                                                                <string>NSAllRomanInputSourcesLocaleIdentifier</string>
                                                            </allowedInputSourceLocales>
                                                        </secureTextFieldCell>
                                                    </secureTextField>
                                                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="cVK-Lq-3v4">
                                                        <rect key="frame" x="50" y="17" width="78" height="32"/>
                                                        <buttonCell key="cell" type="push" title="Login" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="NQf-nh-Nyf">
                                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                            <font key="font" metaFont="systemBlack" size="13"/>
                                                            <string key="keyEquivalent" base64-UTF8="YES">
DQ
</string>
                                                            <userDefinedRuntimeAttributes>
...
