...
        self.tabView.isHidden = true
        
    }
    
    override func viewDidAppear() {
        super.viewDidAppear()
        self.view.window?.title = "Ouvie Dashboard"
    }
    
    func onLogin(user: String, email: String, token: String) -> Void {
        self.user = user
        self.token = token
        
...
